BugFix: overide body { text-align: center } for autocomplete suggestions

--- a/plugins/Ajax/htdocs/images/jquery/jquery.autocomplete.css
+++ b/plugins/Ajax/htdocs/images/jquery/jquery.autocomplete.css
@@ -31,6 +31,7 @@
 	in relative units scroll will be broken in firefox
 	*/
 	line-height: 16px;
+	text-align: left;
 	overflow: hidden;
 }
 
